2012-01-19      v0.08   Oliver Kraus <olikraus@gmail.com>
  * ST7920 beta device
2012-01-21      v0.09   Oliver Kraus <olikraus@gmail.com>
  * ST7920 fixed (192x32)
  * fixed bug in com layer if pins are none
  * str reference position
2012-01-22      v0.10   Oliver Kraus <olikraus@gmail.com>
  * Experimental LM6059 
2012-01-24      v0.11   Oliver Kraus <olikraus@gmail.com>
  * new st7920 memory layout for 128x64 lcd
  * experimental st7920 SPI
2012-01-25      v0.12   Oliver Kraus <olikraus@gmail.com>
  * fixed st7920 memory layout for 128x64 lcd
  * ST7920 SPI performance improvement
2012-01-27	v0.13	Oliver Kraus <olikraus@gmail.com>
  * LM6059 (Adafruit Display) fixed
2012-02-01	v0.14	Oliver Kraus <olikraus@gmail.com>
  * undoRotation()
  * setRot..() can be used without restrictions
  * Class U8GLIB derived from Print class. New function "print" 
  * Fixed memory index bug in the page management procedures
2012-02-12      v1.00	Oliver Kraus <olikraus@gmail.com>
  * XBM support
  * F() macro support
  * str-rotation commands support ref-height and ref-position
2012-03-17      v1.02	Oliver Kraus <olikraus@gmail.com>
  * U8GLIB_ST7687_C144MVGD spi experimental
  * U8GLIB_LC7981_160X80 8bit
  * Intersection test for frame and box procedures
  * 4L double memory architecture  
  * setContrast infrastructure implemented, but not available for all devices
  * drawCircle, drawDisc
  * Bugfix for drawStr270
  * New examples: Chess (ported from dogm128 lib) and GraphicsTest
2012-03-31      v1.03	Oliver Kraus <olikraus@gmail.com>
  * experimental parallel mode atmega
  * more unifont code pages
  * double memory, for NHD OLED and DOGXL160
  * "Menu" example
  * drawLine
2012-04-13      v1.04	Oliver Kraus <olikraus@gmail.com>
  * Adjust U8grelease: Same version number with AVR and Arduino variant
2012-04-21	v1.05	Oliver Kraus <olikraus@gmail.com>
  * m2icon font
  * experimental lc7981_240x64 device
  * experimental ssd1306
  * experimental ssd1322