@@ -435,6 +435,17 @@ class U8GLIB_KS0108_128 : public U8GLIB
       { }
 };
 
+class U8GLIB_SBN1661_122X32 : public U8GLIB 
+{
+  public:
+    U8GLIB_SBN1661_122X32(uint8_t d0, uint8_t d1, uint8_t d2, uint8_t d3, uint8_t d4, uint8_t d5, uint8_t d6, uint8_t d7, 
+        uint8_t cs1, uint8_t cs2, uint8_t di, uint8_t rw = U8G_PIN_NONE, uint8_t reset = U8G_PIN_NONE) 
+      : U8GLIB(&u8g_dev_sbn1661_122x32, d0, d1, d2, d3, d4, d5, d6, d7, U8G_PIN_NONE, cs1, cs2, di, rw, reset)
+      { }
+};
+
+
+
 class U8GLIB_ST7687_C144MVGD: public U8GLIB 
 {
   public:
